# zerospot

./: LICENSE  README.md  config.json.example  pyproject.toml  requirements.txt
tests/: test_encryption.py
zerospot/: __init__.py  blob.py  cli.py  connect.py  crypto.py  helpers.py
