[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zerospot"
version = "0.0.1"
authors = [
  { name="Daniel Marai", email="mdaccreg@gmail.com" },
]
description = "A tool to connect to Spotify Connect devices on the local lan by sending username and password encrypted."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pycryptodome==3.17",
  "requests==2.28.2"
]
keywords = [
  "spotify",
  "connect",
  "zeroconf"
]

[project.scripts]
zerospot = "zerospot.cli:main"

[project.urls]
"Homepage" = "https://github.com/maraid/zerospot"
"Bug Tracker" = "https://github.com/maraid/zerospot/issues"